# engine-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  test.cpp  test.txt
bldsys/: global_options.cmake
cmake/: global_options.cmake
cmake/modules/: FindGLFW.cmake  FindGLM.cmake  FindSpdlog.cmake  Findglslang.cmake  Findspdlog.cmake
engine/: CMakeLists.txt  engine_config.h.in  imgui.ini
engine/shaders/: base.frag  base.vert
engine/src/: entrypoint.cpp  pch.h
engine/src/common/: base.cpp  base.h  base_common.h  error.cpp  error.h  error_common.cpp  error_common.h  glm.h  helpers.h  log_common.h  resource_caching.h  strings.cpp  strings.h  strings_common.cpp  strings_common.h  vulkan.cpp  vulkan.h  vulkan_common.h
engine/src/core/: application.cpp  application.h  glfw_window.h  gui.cpp  gui.h  headless_window.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  options.cpp  options.h  timer.cpp  timer.h  window.h
engine/src/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/platform/: filesystem.cpp  filesystem.h  platform.cpp  platform.h  unix_platform.cpp  unix_platform.h  windows_platform.cpp  windows_platform.h
engine/src/renderer/: camera.cpp  camera.h  glsl_compiler.cpp  glsl_compiler.h  shader.cpp  shader.h  spirv_reflection.cpp  spirv_reflection.h
engine/src/scene/: entity.cpp  entity.h  gltf_loader.cpp  gltf_loader.h  scene.cpp  scene.h  script.cpp  script.h
engine/src/scene/components/: aabb.cpp  aabb.h  camera.cpp  camera.h  image.cpp  image.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  pbr_material.cpp  pbr_material.h  perspective_camera.cpp  perspective_camera.h  sampler.cpp  sampler.h  submesh.cpp  submesh.h  texture.cpp  texture.h  transform.cpp  transform.h
engine/src/scene/components/image/: astc.cpp  astc.h  ktx.cpp  ktx.h  stb.cpp  stb.h
engine/src/scene/scripts/: free_camera.cpp  free_camera.h
engine/src/vulkan_api/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  device.cpp  device.h  fence_pool.cpp  fence_pool.h  initializers.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h  queue_family.cpp  queue_family.h  render_context.cpp  render_context.h  render_frame.cpp  render_frame.h  render_target.cpp  render_target.h  resource_cache.cpp  resource_cache.h  resource_record.cpp  resource_record.h  resource_replay.cpp  resource_replay.h  semaphore_pool.cpp  semaphore_pool.h  swapchain.cpp  swapchain.h
engine/src/vulkan_api/core/: buffer.cpp  buffer.h  buffer_pool.cpp  buffer_pool.h  compute_pipeline.cpp  compute_pipeline.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  image_view.cpp  image_view.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h
engine/src/vulkan_api/instance/: command_pool.cpp  command_pool.h  device.cpp  device.h  fence_pool.cpp  fence_pool.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h  render_context.cpp  render_context.h  resource_cache.cpp  swapchain.cpp  swapchain.h
engine/src/vulkan_api/rendering/: pipeline_state.cpp  pipeline_state.h  render_pipeline.cpp  render_pipeline.h  resource_binding_state.cpp  resource_binding_state.h
engine/src/vulkan_api/shaders/: shader.cpp  shader.h
engine/src/vulkan_api/subpasses/: forward_subpass.cpp  forward_subpass.h  geometry_subpass.cpp  geometry_subpass.h  gui_subpass.cpp  gui_subpass.h  subpass.cpp  subpass.h
engine/src/window/: glfw_input.cpp  glfw_window.cpp  glfw_window.h  headless_window.cpp  headless_window.h  input.h  window.cpp  window.h
sandbox/: CMakeLists.txt
sandbox/src/: sandbox.cpp  sandbox.h
scripts/: mkfile  setup.py
